--- a/Post/templates/communities_page.html
+++ b/Post/templates/communities_page.html
@@ -1,7 +1,13 @@
 {% extends "base.html" %}
 {% block title %} Communities {% endblock %}
 
+                    {% block nav_post %}
+                        
+                        <a style="text-decoration: none; "type="button" data-toggle="modal" data-target="#myPost" class="btn btn-info">
+                            Post Now
+                                   </a>    
 
+                    {% endblock %}
 
 {% block content %}
         <!-- Begin Page Content -->
