--- a/Post/templates/community.html
+++ b/Post/templates/community.html
@@ -1,5 +1,14 @@
 {% extends "base.html" %}
+{% load crispy_forms_tags%}
  {% block title %} Hashn {% endblock %} 
+
+                    {% block nav_post %}
+                        
+                        <a style="text-decoration: none; "type="button" data-toggle="modal" data-target="#myPost" class="btn btn-info">
+                            Post Now
+                                   </a>    
+
+                    {% endblock %}
  {% block content %}
 
 
@@ -28,7 +37,7 @@
             <p>{{community.community_bio}}</p>
             <a class="btn btn-primary" href="#">Call to Action!</a>
 
-            <p class="text-danger mb-0"> POSTING IS ONLY AVAILABLE IN THE HOME PAGE RIGHT NOW <a href="{% url 'home' %}"> Home </a> </p>
+            
         </div>
         <!-- /.col-md-4 -->
     </div>
@@ -50,13 +59,19 @@
                 <div class="card-header py-3">
                     <h5 class="m-0 font-weight-bold text-primary">{{post.user_posted_by}} <small style="font-size: 11px"> at {{post.time_posted}}</small></h5>
                 </div>
+                    <a href=""style="text-decoration: none " class="text-dark"data-toggle="modal" type="button" data-target="#post_isolated">
                 <div class="card-body">
+                          <h3 class="m-0 font-weight-bold text-dark">
+                        
+                        {{post.post_header}}
+                    </h3>
                     {{ post.post_content }}
                     {% if not post.post_pic %}
 
                       {% else %}
                        <hr>
                       <img class="img-fluid rounded mb-4 mb-lg-0"src="{{post.post_pic.url}}">
+                      <br>
                     {% endif %}
                 </div>
 
@@ -66,6 +81,7 @@
                 </div>
               -->
             </div>
+        </a>
 
         </div>
         {% endfor %}
