--- a/Post/templates/post_iso.html
+++ b/Post/templates/post_iso.html
@@ -11,16 +11,20 @@
                     <!--Modal content-->
                     <div class="modal-content card shadow">
 
-                       W <div class="card-header py-3">
+                        <div class="card-header py-3">
                             <h6 class="m-0 font-weight-bold text-primary">{{post_iso.user_posted_by}}  <small style="font-size: 11px"> at {{post_iso.time_posted}}</small></h6>
 
                         </div>
 
                         <div class="card-body">
                             <h5 class="m-0 font-weight-bold text-success"> {{post_iso.post_header}}</h5>
-                            <p class="text-dark m-0">
+                            <br>
+
+                                                        <p class="text-dark">
                             {{post_iso.post_content}}
                             </p>
+
+                            <img class="img-fluid rounded mb-4 mb-lg-0 " src="{{post_iso.post_pic.url}}">
                             
                             <div class="col-auto">
                                               
@@ -50,10 +54,10 @@
                             <br>
                             <br>
                             {% endif %}
-                            <h6 class="text-dark m-0">
+                            <h5 class="text-dark m-0">
                                 {{comment.user_commented_by}}
-                            </h6>
-                                <p class="text-dark m-0"> |{{comment.comment}} 
+                            </h5>
+                                <p class="text-dark m-0"> {{comment.comment}} 
                                 </p>
                                 <small>{{comment.time_commented}}</small>
                                 <br>
