fixes and licenses

--- a/Post/templates/post_iso.html
+++ b/Post/templates/post_iso.html
@@ -1,3 +1,9 @@
+{% comment %}
+
+    # Code adapted from startbootstrap's GitHub Repository: startbootstrap-small-business | Base Template for Community
+    # https://github.com/startbootstrap/startbootstrap-small-business
+
+{% endcomment %}
 {% extends "base.html" %}
 {% include "community.html" %}
 {% load crispy_forms_tags %}
