--- a/Post/templates/base.html
+++ b/Post/templates/base.html
@@ -1,3 +1,9 @@
+{% comment %}
+
+    # Code adapted from startbootstrap's GitHub Repository: startbootstrap-small-business | Base Template for Community
+    # https://github.com/startbootstrap/startbootstrap-small-business
+
+{% endcomment %}
 {% load static %} <!-- UNUSED FOR NOW -->
 <!DOCTYPE html>
 <html lang="en">
