--- a/Post/templates/communities_page.html
+++ b/Post/templates/communities_page.html
@@ -1,3 +1,9 @@
+{% comment %}
+
+    # Code adapted from startbootstrap's GitHub Repository: startbootstrap-small-business | Base Template for Community
+    # https://github.com/startbootstrap/startbootstrap-small-business
+
+{% endcomment %}
 {% extends "base.html" %}
 {% block title %} Communities {% endblock %}
 
