--- a/Post/templates/community.html
+++ b/Post/templates/community.html
@@ -1,3 +1,9 @@
+{% comment %}
+
+    # Code adapted from startbootstrap's GitHub Repository: startbootstrap-small-business | Base Template for Community
+    # https://github.com/startbootstrap/startbootstrap-small-business
+
+{% endcomment %}
 {% extends "base.html" %}
 {% load crispy_forms_tags%}
  {% block title %} Hashn {% endblock %} 
